cmake_minimum_required(VERSION 3.15)
project(famuz_c C)

set(CMAKE_C_STANDARD 11)

include_directories(src/famuz)
include_directories(src/famuz/compiler)
include_directories(src/famuz/compiler/expr)
include_directories(src/famuz/compiler/generator)
include_directories(src/famuz/compiler/lexer)
include_directories(src/famuz/compiler/parser)
include_directories(src/famuz/compiler/type)
include_directories(src/famuz/util)

add_executable(famuz_c
        src/famuz/compiler/expr/expr-binop.h
        src/famuz/compiler/expr/expr-block.h
        src/famuz/compiler/expr/expr-call.h
        src/famuz/compiler/expr/expr-constant.h
        src/famuz/compiler/expr/expr-function.h
        src/famuz/compiler/expr/expr-parentheses.h
        src/famuz/compiler/expr/expr-var.h
        src/famuz/compiler/expr/expr.h
        src/famuz/compiler/generator/generate.h
        src/famuz/compiler/generator/generator_binop.h
        src/famuz/compiler/generator/generator_call.h
        src/famuz/compiler/lexer/lexer-token.h
        src/famuz/compiler/lexer/lexer.h
        src/famuz/compiler/parser/parser-assignment.h
        src/famuz/compiler/parser/parser-binop.h
        src/famuz/compiler/parser/parser-block.h
        src/famuz/compiler/parser/parser-call.h
        src/famuz/compiler/parser/parser-chord.h
        src/famuz/compiler/parser/parser-func.h
        src/famuz/compiler/parser/parser-identifier.h
        src/famuz/compiler/parser/parser-key.h
        src/famuz/compiler/parser/parser-parentheses.h
        src/famuz/compiler/parser/parser-print.h
        src/famuz/compiler/parser/parser-rhythm.h
        src/famuz/compiler/parser/parser-scale.h
        src/famuz/compiler/parser/parser-steps.h
        src/famuz/compiler/parser/parser-typing.h
        src/famuz/compiler/parser/parser.h
        src/famuz/compiler/parser/precedence.h
        src/famuz/compiler/type/type-chord.h
        src/famuz/compiler/type/type-harmony.h
        src/famuz/compiler/type/type-hit.h
        src/famuz/compiler/type/type-identifier.h
        src/famuz/compiler/type/type-key.h
        src/famuz/compiler/type/type-melody.h
        src/famuz/compiler/type/type-music.h
        src/famuz/compiler/type/type-note.h
        src/famuz/compiler/type/type-rhythm.h
        src/famuz/compiler/type/type-scale.h
        src/famuz/compiler/type/type-scaled-key.h
        src/famuz/compiler/type/type-steps.h
        src/famuz/compiler/type/type.h
        src/famuz/compiler/environment.h
        src/famuz/compiler/position.h
        src/famuz/compiler/reserved.h
        src/famuz/compiler/scanner.h
        src/famuz/compiler/settings.h
        src/famuz/compiler/token.h
        src/famuz/util/assert.h
        src/famuz/util/file-util.h
        src/famuz/util/printer.h
        src/famuz/util/string-util.h
        src/famuz/famuz.h
        src/main.c)
